Cumulative updates (#194)
This raises runtime requirement to Java 17, but with a twist: to support older Maven versions (3.6, 3.8) that use ancient Eclipse Sisu that support gleaning of max Java 14 bytecode (to discover components), the plugin itself remains Java 11.

Main changes in this PR:
* parent update/plugin updates/deps updates
* update JDT/ECJ to latest (requires Java 17 at runtime)
* raises lifecycle **runtime requirement to Java 17** (while it still can produce Java 8 w/ release option)
* makes lifecycle **Maven 4 compatible**
* makes lifecycle **Java 22+ (current tested w/ Java 24) compatible** (javac proc changes)